--- a/css/index.css
+++ b/css/index.css
@@ -112,7 +112,10 @@ button {
 
 @media screen and (min-width: 1280px) { 
 	.backgroundHeader {
-		background-position: right;
+		background-position: center;
+		background-size: cover;
+		height: 611px;
+		width: 72%;
 	}
 }
 
@@ -120,11 +123,6 @@ button {
 	.headerAndSponsorshipWrapper {
 		padding-top: 50px;
 		height: 600px;
-	}
-	.backgroundHeader {
-		background-position: right;
-		height: 611px;
-		width: 89%;
 	}
 }
 
@@ -134,21 +132,6 @@ button {
 	}
 	.TopWhiteBackground {
 		display: block;
-	}
-}
-
-@media screen and (min-width: 1700px) {
-	.backgroundHeader {
-		background-position: 120%;
-	}
-}
-
-@media screen and (min-width: 2000px) { 
-	.backgroundHeader {
-		background-position: initial;
-		background-size: auto;
-		height: 611px;
-		width: 100%;
 	}
 }
 
