--- a/css/fiscalSponsorship.css
+++ b/css/fiscalSponsorship.css
@@ -85,6 +85,21 @@ button.applyToStart {
   white-space: nowrap;
 }
 
+.learnMore:hover {
+  background:  rgba(255, 255, 255, 0.4);
+}
+
+.learnMore:focus {
+  border: solid 1px rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.learnMore:active {
+  border: solid 2px #90f0bd;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+
 .sponsorShipIllustrationWrapper {
   display: flex;
   box-sizing: border-box;
