--- a/css/readyToGetStarted.css
+++ b/css/readyToGetStarted.css
@@ -104,6 +104,10 @@
   display: none;
 }
 
+a.longerTextLink {
+  display: none;
+}
+
 
 @media screen and (min-width: 640px) {
   .readyToGetStartedIllustration {
@@ -130,6 +134,9 @@
     display: flex;
   }
   .longerTextLink {
+    display: block;
+  }
+  a.longerTextLink {
     display: block;
   }
 }
