--- a/css/ourFees.css
+++ b/css/ourFees.css
@@ -64,7 +64,7 @@
 
 .amountRaisedCard {
   width: 288px;
-  height: 112px;
+  height: 160px;
   padding: 32px 24px 16px;
   display: flex;
   justify-content: flex-end;
@@ -73,22 +73,18 @@
   box-sizing: border-box;
 }
 
-.eightPercent {
+.fivePercent {
   border-top-right-radius : 32px;
   border-top-left-radius : 32px;
-  background: url("/images/leaf-1.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
-  background-color: #8AC6C1;
+  background: url("/images/opencollective-icon.svg") no-repeat 20px center, linear-gradient(to top, #045257 5%, #045257 5%, #4e908d 86%), linear-gradient(to bottom, #4e908d, #4e908d);;
+  background-color: #4e908d;
 }
 
-.sixPercent {
-  background: url("/images/leaf-1.svg") no-repeat 0 0, url("/images/leaf-2.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
-  background-color: #4E908D;
-}
 
 .fourPercent {
   border-bottom-right-radius : 32px;
   border-bottom-left-radius : 32px;
-  background: url("/images/leaf-1.svg") no-repeat 0 0, url("/images/leaf-2.svg") no-repeat 0 0, url("/images/leaf-3.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
+  background: url("/images/leaves.svg") no-repeat 20px bottom, linear-gradient(to top, #045257 6%, #045257 6%, #4e908d 86%), linear-gradient(to bottom, #045257, #045257);
   background-color: #045257;
 }
 
@@ -109,9 +105,24 @@
 
 .figure > .percentage{
   font-size: 32px;
-} 
+}
 
-.figureInWords {
+.methodWrapper {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.method {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: right;
+  color: #ffffff;
+}
+
+.methodDescription {
   font-size: 14px;
   font-weight: bold;
   line-height: 1.14;
@@ -119,11 +130,15 @@
   color: #cddadb;
 }
 
+.methodDescription > span {
+  color: #fff;
+}
+
 .crowdFundingWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 24px;
 }
 
 .crowdFundingWrapper h3 {
@@ -135,18 +150,9 @@
   margin-bottom: 16px;
 }
 
-.fivePercent {
-  border-radius: 32px;
-  padding-top: 16px;
-  background: url("/images/opencollective-icon.svg") no-repeat 24px 41px, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
-  background-color: #05464A;
-}
-
 .crowdFundingWrapper > .note {
   width: 288px;
-  margin-top: 16px;
   margin-bottom: 8px;
-
 }
 
 .crowdFundingWrapper > .note > p {
@@ -154,11 +160,17 @@
   line-height: 1.33;
   text-align: center;
   color: #313233;
+  margin-bottom: 16px;
+}
+
+.crowdFundingWrapper > .note > p:last-of-type {
+  margin-bottom: 0;
 }
 
 .crowdFundingWrapper > .note > p > a {
   font-weight: bold;
   color: #4e908d;
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 640px) {
@@ -179,34 +191,20 @@
     margin-right: 0;
     width: 200px;
   }
-  .eightPercent, .fourPercent {
+  .fivePercent, .fourPercent {
     border-radius: 0;
   }
-  .eightPercent {
+  .fivePercent {
     border-top-left-radius: 32px;
     border-bottom-left-radius: 32px;
-    background: url("/images/leaf-1.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
-    background-color: #8AC6C1;
+    background: url("/images/opencollective-icon.svg") no-repeat 20px 20px, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
+    background-color: #4E908D;
   }
   .fourPercent {
     border-top-right-radius: 32px;
     border-bottom-right-radius: 32px;
-    background: url("/images/leaf-1.svg") no-repeat 0 0, url("/images/leaf-2.svg") no-repeat 0 0, url("/images/leaf-3.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
+    background: url("/images/leaves.svg") no-repeat 20px bottom, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
     background-color: #045257;
-  }
-  .sixPercent{
-    background: url("/images/leaf-1.svg") no-repeat 0 0, url("/images/leaf-2.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
-    background-color: #4E908D;
-  }
-  .crowdFundingWrapper {
-    margin-top: 48px;
-  }
-  .fivePercent {
-    padding: 10px 5px;
-    box-sizing: border-box;
-  }
-  .fivePercent > .figureRaisedWrapper {
-    flex-direction: row-reverse;
   }
   .crowdFundingWrapper > .note {
     width: 448px;
@@ -225,10 +223,12 @@
     width: 688px;
   }
   .amountRaisedCard {
-    width: 240px;
+    width: 352px;
+    height: 144px;
+    padding: 16px 32px 24px 16px;
   }
-  .fivePercent {
-    padding: 21px 16px 24px 21px;
+  .crowdFundingWrapper > .note {
+    width: 624px;
   }
 }
 
@@ -241,7 +241,6 @@
 
 @media screen and (min-width: 1440px) {
   .amountRaisedAndCrowdFundWrapper {
-    height: 295px;
     align-items: center;
     margin-top: 17px;
   }
@@ -255,16 +254,6 @@
   .fiscalSponsorshipWrapper p {
     display: none;
   }
-  .amountRaisedWrapperWithTitle {
-    display: flex;
-    flex-direction: column;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 33px;
-    padding-bottom: 106px;
-    background-image: linear-gradient(to top, rgba(130, 163, 165, 0), #82a3a5 43%, rgba(130, 163, 165, 0));
-    background: linear-gradient(0deg, rgba(130,163,165,0.00) 0%, #82A3A5 56%, rgba(130,163,165,0.00) 100%);;
-  }
   .amountRaisedWrapperWithTitle p {
     display: block;
     font-size: 16px;
@@ -275,36 +264,39 @@
     margin-bottom: 17px;
   }
   .amountRaisedAndCrowdFundWrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    background-image: linear-gradient(to top, rgba(130, 163, 165, 0), #82a3a5 43%, rgba(130, 163, 165, 0));
+    background: linear-gradient(0deg, rgba(130,163,165,0.00) 0%, #82A3A5 56%, rgba(130,163,165,0.00) 100%);;
   }
-  .crowdFundingWrapper {
-    margin-top: 0;
-    padding: 33px 16px 58px;
-    background-image: linear-gradient(to top, rgba(180, 200, 201, 0) 100%, #b4c8c9 41%, rgba(180, 200, 201, 0));
-    background: linear-gradient(0deg, rgba(180,200,201,0.00) 0%, #B4C8C9 59%, rgba(180,200,201,0.00) 100%);;
+  .amountRaisedCard {
+    width: 521px;
+    height: 115px;
+    padding: 24px 24px;
   }
   .fivePercent {
-    width: 448px;
+    background: url("/images/opencollective-icon.svg") no-repeat 20px center, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
+    background-color: #4E908D;
   }
-  .crowdFundingWrapper > .note > p {
-    text-align: right;
+  .figureRaisedWrapper {
+    display: flex;
+    flex-direction: row-reverse;
   }
-  .fivePercent > .figureRaisedWrapper > .figureInWords {
-    width: 240px;
+  .fivePercent > .figureRaisedWrapper > .methodWrapper {
+    width: 301px;
+    display: flex;
+    flex-direction: column;
     margin-right: 16px;
-    position: relative;
-    top: -10px;
   }
-  .fivePercent > .figureRaisedWrapper > .figure > .number {
-    font-size: 56px;
-    font-weight: bold;
-    line-height: 1;
-    text-align: center;
-    color: #e6eded;
+  .fourPercent > .figureRaisedWrapper > .methodWrapper {
+    width: 240px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 16px;
   }
-  .fivePercent > .figureRaisedWrapper > .figure > .percentage {
-    font-size: 32px;
+  .crowdFundingWrapper > .note {
+    width: 828px;
   }
 }
