--- a/css/whatWeOffer.css
+++ b/css/whatWeOffer.css
@@ -25,7 +25,7 @@
   box-sizing: border-box;
 }
 
-.whatWeOfferIllustration img{
+.whatWeOfferIllustration img {
   width: 100%;
   height: 100%;
 }
@@ -132,7 +132,7 @@
 
 @media screen and (min-width: 1440px) {
   .whatWeOfferSection {
-    background: #F7F8FA;
+    background: #f7f8fa;
     display: flex;
     justify-content: center;
   }
