--- a/css/donors.css
+++ b/css/donors.css
@@ -1,5 +1,5 @@
 .donorsSection {
-  background-color: #F7F8FA;
+  background-color: #f7f8fa;
 }
 .donorsBgWrapper {
   position: relative;
@@ -102,7 +102,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(180deg, #F7F8FA 60%, #f0f1f2 40%);
+    background: linear-gradient(180deg, #f7f8fa 60%, #f0f1f2 40%);
     z-index: 0;
     position: relative;
   }
@@ -117,5 +117,3 @@
     height: 136px;
   }
 }
-
-
