Add navigation HTML

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,8 +2,30 @@
 layout: default
 ---
 
-<% collections.section.forEach((section) => { %>
-<section id="<%- section.fileSlug %>">
-  <%- section.templateContent %>
-</section>
-<% }) %>
+<nav>
+  <ul>
+    <% collections.section.filter(section => !section.data.hideInNavigation).forEach((section)=> { %>
+    <li>
+      <a href="#<%= section.fileSlug %>"><%= section.data.title %></a>
+    </li>
+    <% }) %>
+    <li>
+      <a 
+        href="https://www.giarts.org/grantmakers-arts-request-proposals-consultant-1" 
+        rel="noopener noreferrer" 
+        target="_blank"
+      >
+      GIA
+      </a>
+    </li>
+  </ul>
+</nav>
+
+
+<main>
+  <% collections.section.forEach((section) => { %>
+  <section id="<%- section.fileSlug %>">
+    <%- section.templateContent %>
+  </section>
+  <% }) %>
+</main>
