Setup CSS preprocessing

--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -9,6 +9,7 @@
   <% } else { %>
     <title><%= locals.title %></title>
   <% } %>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <%- content %>
