--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -10,6 +10,7 @@
     <title><%= locals.title %></title>
   <% } %>
   <link rel="stylesheet" href="styles.css">
+  <%- include('/fonts') %>
 </head>
 <body>
   <%- content %>
