First take at above-the-fold content

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<nav>
+<nav style="display: none">
   <ul>
     <% collections.section.filter(section => !section.data.hideInNavigation).forEach((section)=> { %>
     <li>
