--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -12,12 +12,15 @@ body {
   background-color: @background-color-base;
 
   line-height: @line-height-base;
+
+  -webkit-font-smoothing: antialiased;
 }
 
 h1 {
   font-family: @font-family-sans;
   font-weight: @font-weight-bold;
   font-size: @font-size-h1;
+  line-height: normal;
 }
 
 h2 {
