Add the site title in
Not in the spec, but seems important for users, SEO

--- a/src/sections/welcome.ejs
+++ b/src/sections/welcome.ejs
@@ -8,9 +8,14 @@ position: 0
   </div>
 
   <div class="below-video-content">
-    <h1 class="greeting" id="greeting">
-      Welcome
-    </h1>
+    <div class="headings">
+      <h2 class="greeting" id="greeting">
+        Welcome
+      </h2>
+      <h1 class="site-title">
+        Solidarity not Charity - Grantmaking in the Solidarity Economy
+      </h1>
+    </div>
 
     <a href="#TODO" class="download-button">Download Report</a>
   </div>
