Remove extraneous padding

--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -17,7 +17,7 @@
   .below-video-content {
     max-width: @content-width;
     width: 100%;
-    padding: @grid @grid (@grid * 2) @grid;
+    padding: 0 @grid;
     box-sizing: border-box;
     align-self: center;
 
