Use title from config

--- a/src/sections/welcome.ejs
+++ b/src/sections/welcome.ejs
@@ -13,7 +13,7 @@ position: 0
         Welcome
       </h2>
       <h1 class="site-title">
-        Solidarity not Charity - Grantmaking in the Solidarity Economy
+        <%= site.title %>
       </h1>
     </div>
 
