--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -40,7 +40,7 @@
     font-size: @font-size-h2;
   }
 
-  // Semantically, this is the headline,
+  // Semantically, this is an h1,
   // but it's rendered as a subtitle
   .site-title {
     font-size: @font-size-base;
