--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -36,3 +36,8 @@ blockquote {
   font-style: italic;
   line-height: @line-height-large;
 }
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
