--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -2,11 +2,13 @@
 @import '../variables/sizing.less';
 @import '../variables/color.less';
 
+@nav-height: @grid * 3;
+
 .section-welcome {
   display: flex;
   flex-direction: column;
   height: 0;
-  min-height: 100vh;
+  min-height: calc(100vh - @nav-height);
 
   .video-container {
     flex-grow: 1;
@@ -53,7 +55,6 @@
     padding: (@grid / 2) @grid;
     background-color: @accent-color-red;
     color: @background-color-lighter;
-    text-decoration: none;
 
     &:hover {
       background-color: @accent-color-red-light;
