I like Jade better

--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -53,11 +53,11 @@
   a.download-button {
     display: inline-block;
     padding: (@grid / 2) @grid;
-    background-color: @accent-color-red;
+    background-color: @accent-color-jade;
     color: @background-color-lighter;
 
     &:hover {
-      background-color: @accent-color-red-light;
+      background-color: tint(@accent-color-jade, 20%);
     }
   }
 
