--- a/src/_includes/vimeo.ejs
+++ b/src/_includes/vimeo.ejs
@@ -1,2 +1,2 @@
-<iframe src="https://player.vimeo.com/video/<%= id _%>?title=0&byline=0&portrait=0" width="100%" height="100%" frameborder="0"
+<iframe src="https://player.vimeo.com/video/<%= id _%>?title=0&byline=0&portrait=0&color=00b5a4&responsive=1" width="100%" height="100%" frameborder="0"
   allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
