--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -17,7 +17,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  height: @nav-height;
+  min-height: @nav-height;
 
   background-color: fade(@background-color-base, 90%);
   backdrop-filter: blur(2px);
