--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -17,10 +17,8 @@
   }
 
   .below-video-content {
-    max-width: @content-width;
     width: 100%;
-    padding: 0 @grid;
-    box-sizing: border-box;
+    .content-container();
     align-self: center;
 
     display: flex;
