--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -5,3 +5,10 @@
 @content-width: 1200px;
 
 @mobile-width: 768px;
+
+.content-container() {
+  max-width: @content-width;
+  margin: auto;
+  padding: 0 @grid;
+  box-sizing: border-box;
+}
