Run prettier on ejs files

--- a/src/_includes/fonts.ejs
+++ b/src/_includes/fonts.ejs
@@ -1,12 +1,16 @@
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" />
 
 <% [
-  'https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap',
-  'https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap']
-  .forEach((href) => {
-%>
-  <link rel="preload" href="<%- href %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript>
-    <link rel="stylesheet" href="<%- href %>">
-  </noscript>
+'https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap',
+'https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap']
+.forEach((href) => { %>
+<link
+  rel="preload"
+  href="<%- href %>"
+  as="style"
+  onload="this.onload=null;this.rel='stylesheet'"
+/>
+<noscript>
+  <link rel="stylesheet" href="<%- href %>" />
+</noscript>
 <% }) %>
