--- a/src/sections/script.ejs
+++ b/src/sections/script.ejs
@@ -3,6 +3,7 @@ title: Script
 hideInNavigation: true
 position: 1
 ---
+
 <div class="section-script">
   <div class="two-up">
     <p>No one knows what arts and culture will look like after the pandemic</p>
@@ -11,120 +12,174 @@ position: 1
 
       <p>A third of museums say they are likely to close forever.</p>
 
-      <p>Black and Indigenous people have a <strong>COVID-19 death rate of double or more</strong> than the death rate of White people in the US.</p>
+      <p>
+        Black and Indigenous people have a
+        <strong>COVID-19 death rate of double or more</strong> than the death
+        rate of White people in the US.
+      </p>
 
-      <p>And yet, foundation giving in 2020 documented that only 5 percent of
-      pandemic-response dollars were intended for communities of color.</p>
+      <p>
+        And yet, foundation giving in 2020 documented that only 5 percent of
+        pandemic-response dollars were intended for communities of color.
+      </p>
 
-      <p>Around <strong>half of 1 percent</strong> of annual foundation giving directly supports women and
-      girls of color.</p>
+      <p>
+        Around <strong>half of 1 percent</strong> of annual foundation giving
+        directly supports women and girls of color.
+      </p>
 
       <p>And less than half of 1 percent goes to Native Americans.</p>
 
-      <p>What would the cultural economy be like if it loved Black and Indigenous
-      people?</p>
+      <p>
+        What would the cultural economy be like if it loved Black and Indigenous
+        people?
+      </p>
     </div>
   </div>
 
-
   <div class="two-up">
-    <p>All around the country, the people who have been most harmed by our current systems are practicing self-determination
-    and community wealth</p>
+    <p>
+      All around the country, the people who have been most harmed by our
+      current systems are practicing self-determination and community wealth
+    </p>
 
     <div>
       <p>
-        The movement for <strong>permanently affordable space</strong> in Oakland, places culture at the center of the work.
+        The movement for <strong>permanently affordable space</strong> in
+        Oakland, places culture at the center of the work.
       </p>
       <p>
-        The first <strong>democratically managed investment fund in the country</strong> &mdash; making non-extractive loans to community members &mdash;
-        says: “cultural workers are economy builders.”
+        The first
+        <strong>democratically managed investment fund in the country</strong>
+        &mdash; making non-extractive loans to community members &mdash; says:
+        “cultural workers are economy builders.”
+      </p>
+      <p>Culture bearers lead the oldest native co-op in the country.</p>
+      <p>
+        Artists started the oldest non-extractive Venture Capital firm in the
+        US.
       </p>
       <p>
-        Culture bearers lead the oldest native co-op in the country.
+        A co-op giving 35,000 freelancers the benefit of full-time employment
+        was founded by artists. It includes employment insurance and pension.
       </p>
       <p>
-        Artists started the oldest non-extractive Venture Capital firm in the US.
+        The nationally recognized legal organization that supports Solidarity
+        Economy groups was co-founded by a cartoonist.
       </p>
-      <p>
-        A co-op giving 35,000 freelancers the benefit of full-time employment was founded by artists. It includes employment
-        insurance and pension.
-      </p>
-      <p>
-        The nationally recognized legal organization that supports Solidarity Economy groups was co-founded by a cartoonist.
-      </p>
-      <p>
-        Black Lives Matter was co-founded by an artist.
-      </p>
+      <p>Black Lives Matter was co-founded by an artist.</p>
     </div>
   </div>
 
   <p class="one-up">
-    This work is not new. Creatives are “going back to the future,” to practices of shared livelihoods rooted in cultural
-    traditions.
+    This work is not new. Creatives are “going back to the future,” to practices
+    of shared livelihoods rooted in cultural traditions.
   </p>
 
   <div class="two-up">
     <p>Why should culture and economic innovation go together?</p>
     <div>
       <p>Because…</p>
-      <p>Right now, we have a superstar system where the winners take all and the rest are left with crumbs.</p>
+      <p>
+        Right now, we have a superstar system where the winners take all and the
+        rest are left with crumbs.
+      </p>
       <p>Just like art, housing and dignified work are human rights.</p>
       <p>Artists are the original gig workers.</p>
       <p>Culture-making and political organizing go hand-in-hand.</p>
-      <p>We want a world where <strong>everyone’s needs are met so <em>everyone</em> can participate in the remaking of culture</strong> and society.</p>
-      <p>An artist living in a community land trust in New York City will have <strong>27 hours a week to make art</strong>, compared to an
-      artist in market-priced housing who will have <strong>4 hours</strong> a week for artmaking.</p>
+      <p>
+        We want a world where
+        <strong
+          >everyone’s needs are met so <em>everyone</em> can participate in the
+          remaking of culture</strong
+        >
+        and society.
+      </p>
+      <p>
+        An artist living in a community land trust in New York City will have
+        <strong>27 hours a week to make art</strong>, compared to an artist in
+        market-priced housing who will have <strong>4 hours</strong> a week for
+        artmaking.
+      </p>
       <p>We must repair centuries of injustice.</p>
     </div>
   </div>
 
   <div class="two-up">
     <div>
-      <p>What do a <strong>mutual aid networks</strong>,<br>
-        <strong>worker co-ops</strong>,<br>
-        <strong>community land trusts</strong>,<br>
-        <strong>participatory budgeting</strong>,<br>
-        and <strong>time banks</strong><br>
+      <p>
+        What do a <strong>mutual aid networks</strong>,<br />
+        <strong>worker co-ops</strong>,<br />
+        <strong>community land trusts</strong>,<br />
+        <strong>participatory budgeting</strong>,<br />
+        and <strong>time banks</strong><br />
         have in common?
       </p>
     </div>
-    <p>Community ownership and democratic governance that builds political, cultural, and economic power.</p>
+    <p>
+      Community ownership and democratic governance that builds political,
+      cultural, and economic power.
+    </p>
   </div>
 
   <div class="two-up">
-    <p>When these hyper-local initiatives get together, they have enormous power.</p>
+    <p>
+      When these hyper-local initiatives get together, they have enormous power.
+    </p>
     <div>
-      <p>This emergent movement goes by many names &mdash; <small>economic democracy, new economy, regenerative economics, degrowth,
-        the commons, local community economic development, democratic socialism, just transition, dual power, liberation
-        economy</small> &mdash; but internationally, it is known as the <strong>Social and Solidarity Economy</strong>, or Solidarity Economy for
-      short. It provides resilience against crisis and has lasting impact when supported as a holistic system.
+      <p>
+        This emergent movement goes by many names &mdash;
+        <small
+          >economic democracy, new economy, regenerative economics, degrowth,
+          the commons, local community economic development, democratic
+          socialism, just transition, dual power, liberation economy</small
+        >
+        &mdash; but internationally, it is known as the
+        <strong>Social and Solidarity Economy</strong>, or Solidarity Economy
+        for short. It provides resilience against crisis and has lasting impact
+        when supported as a holistic system.
       </p>
     </div>
   </div>
 
   <div class="two-up">
-    <p>To support this work, you can: <strong>educate yourself</strong>, <strong>join existing organizing work</strong>, and
-      <strong>advocate for economic justice</strong>.</p>
+    <p>
+      To support this work, you can: <strong>educate yourself</strong>,
+      <strong>join existing organizing work</strong>, and
+      <strong>advocate for economic justice</strong>.
+    </p>
     <div>
-      <p>Organize a book club in your community. Read the book “Collective Courage”. Study toward action.</p>
-      <p>Find your local credit union, worker co-op, and time bank, and join it.</p>
+      <p>
+        Organize a book club in your community. Read the book “Collective
+        Courage”. Study toward action.
+      </p>
+      <p>
+        Find your local credit union, worker co-op, and time bank, and join it.
+      </p>
       <p>Make media about this work: songs, posters, memes, and stories.</p>
       <p>Make gifts and loans of time, art, and money to seed these groups.</p>
-      <p>Follow the lead of grassroots organizers and commit to long term support.</p>
-      <p>Advocate for legal and fiscal policies that enable the Solidarity Economy to thrive.</p>
+      <p>
+        Follow the lead of grassroots organizers and commit to long term
+        support.
+      </p>
+      <p>
+        Advocate for legal and fiscal policies that enable the Solidarity
+        Economy to thrive.
+      </p>
     </div>
   </div>
 
   <p class="one-up">
-    The people who have been most harmed are creating community-controlled, hyper-local economies that are resilient
-    amidst crisis.
+    The people who have been most harmed are creating community-controlled,
+    hyper-local economies that are resilient amidst crisis.
   </p>
 
   <p class="one-up">
-    <strong>The systems that artists want are not only possible—they already exist</strong>, and can be strengthened and cultivated with
-    intention.
+    <strong
+      >The systems that artists want are not only possible—they already
+      exist</strong
+    >, and can be strengthened and cultivated with intention.
   </p>
-
 
   <!--
   <script>
