Fix strong text font weight

--- a/src/styles/sections/script.less
+++ b/src/styles/sections/script.less
@@ -23,6 +23,7 @@ html {
   p strong {
     font-style: inherit;
     background-color: @accent-color-yellow-light;
+    font-weight: inherit;
 
     // Classes assigned in js
     &.red {
