--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,3 +6,4 @@
 @import './sections/welcome.less';
 @import './sections/script.less';
 @import './sections/people.less';
+@import './sections/report.less';
