Make button on Welcome link to #report

--- a/src/sections/welcome.ejs
+++ b/src/sections/welcome.ejs
@@ -14,7 +14,7 @@ position: 0
       <h1 class="site-title"><%= site.title %></h1>
     </div>
 
-    <a href="#TODO" class="download-button">Download Report</a>
+    <a href="#report" class="download-button">Download Report</a>
   </div>
 </div>
 
